<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title_add_new_name_dialog_custom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/add_new_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etxt_username_add_new_name_dialog_custom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:hint="@string/type_the_name"
        android:textColorHint="@android:color/darker_gray"/>


    <ImageButton
        android:id="@+id/img_btn_select_image_add_new_name_dialog_custom_layout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_upload_image"
        android:background="@drawable/image_button_background"/>

    <Button
        android:id="@+id/btn_done_add_new_user_custom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/button_background"
        android:text="@string/done"
        android:textColor="@color/white" />


</LinearLayout>